feat: add preset summary display and update UI on preset selection

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <option value="Amygdala">Amygdala</option>
         <option value="Thalamocortical_Loop">Thalamocortical Loop</option>
       </select>
+      <span id="presetSummary" style="margin-left:12px; color:#9aa5b1; font-size:12px"></span>
     </div>
 
     <!-- LEFT CONTROLS -->
