feat: add neuron metadata display in the right panel

--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
       <div style="margin-bottom: 8px; font-size: 12px; color: #94a3b8">
         Voltage: <span id="voltageValue">--</span> | Threshold: 1.0
       </div>
+      <div id="neuronMeta" style="font-size:12px; color:#9aa5b1; margin-bottom:8px; min-height: 16px;"></div>
       <canvas id="trace" width="260" height="150"></canvas>
     </div>
 
