feat: add hippocampus preset and implement template-driven network construction; enhance UI for preset selection

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
       <select id="presetSelect">
         <option value="None">None</option>
         <option value="Frontal_Cortex">Frontal Cortex</option>
+        <option value="Hippocampus">Hippocampus</option>
         <option value="Amygdala">Amygdala</option>
         <option value="Thalamocortical_Loop">Thalamocortical Loop</option>
       </select>
