--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
 
     <div id="err"></div>
 
+    <script src="js/templates/schema.js"></script>
     <script src="js/templates/registry.js"></script>
     <script src="js/app.js"></script>
   </body>
