--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -17,9 +17,9 @@
         display: inline-block;
         width: 16px;
         height: 16px;
-        background: #374e84;
+        background: var(--accent-primary);
         border-radius: 50%;
-        color: white;
+        color: var(--surface-1);
         text-align: center;
         line-height: 16px;
         font-size: 12px;
@@ -31,7 +31,7 @@
       }
 
       .param-info:hover {
-        background: #4a5f9e;
+        background: var(--accent-glow);
       }
 
       .param-info .tooltip {
@@ -42,8 +42,8 @@
         bottom: 125%;
         left: 50%;
         transform: translateX(-50%);
-        background: #1a1d29;
-        color: #ffffff;
+        background: var(--surface-2);
+        color: var(--text);
         padding: 12px;
         border-radius: 8px;
         font-size: 12px;
@@ -51,7 +51,7 @@
         line-height: 1.4;
         width: 280px;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-        border: 1px solid #374e84;
+        border: 1px solid var(--accent-subtle);
         transition: opacity 0.3s, visibility 0.3s;
       }
 
@@ -78,14 +78,14 @@
       }
 
       .tooltip-title {
-        color: #ff9bf0;
+        color: var(--text-accent);
         font-weight: bold;
         margin-bottom: 6px;
         display: block;
       }
 
       .tooltip-example {
-        color: #9ca3af;
+        color: var(--text-muted);
         font-style: italic;
         margin-top: 6px;
         font-size: 11px;
@@ -98,9 +98,9 @@
 
     <!-- TOP BAR -->
     <div id="hud">
-      <div style="font-weight: 600; color: #f1f5f9">SNN • Neural Network</div>
+      <div style="font-weight: 600; color: var(--text-accent)">SNN • Neural Network</div>
       <button id="play" class="btn on">Pause</button>
-      <label style="color: #94a3b8"
+      <label style="color: var(--text-muted)"
         >Speed:
         <input
           id="speed"
@@ -116,7 +116,7 @@
 
     <!-- LESSONS BAR -->
     <div id="lessonPanel">
-      <label for="lessonSelect" style="color: #94a3b8; font-weight: 500">Lesson:</label>
+      <label for="lessonSelect" style="color: var(--text-muted); font-weight: 500">Lesson:</label>
       <select id="lessonSelect">
         <option value="1">Lesson 1: Basic Spike Dynamics</option>
         <option value="2">Lesson 2: Synaptic Transmission</option>
@@ -135,7 +135,7 @@
 
     <!-- PRESET BAR (center top) -->
     <div id="presetBar">
-      <label for="presetSelect" style="color: #94a3b8; font-weight: 500">Preset:</label>
+      <label for="presetSelect" style="color: var(--text-muted); font-weight: 500">Preset:</label>
       <select id="presetSelect">
         <option value="None">None</option>
         <option value="Frontal_Cortex">Frontal Cortex</option>
@@ -143,12 +143,12 @@
         <option value="Amygdala">Amygdala</option>
         <option value="Thalamocortical_Loop">Thalamocortical Loop</option>
       </select>
-      <span id="presetSummary" style="margin-left:12px; color:#9aa5b1; font-size:12px"></span>
+      <span id="presetSummary" style="margin-left:12px; color:var(--text-muted); font-size:12px"></span>
     </div>
 
     <!-- LEFT CONTROLS -->
     <div id="controls">
-      <h4 style="margin: 0 0 12px; color: #f1f5f9">Learning Controls</h4>
+      <h4 style="margin: 0 0 12px; color: var(--text-accent)">Learning Controls</h4>
 
       <div class="control-group">
         <label
@@ -407,10 +407,10 @@
     <!-- RIGHT INFO -->
     <div id="panel">
       <h4 id="sel">Select Neuron</h4>
-      <div style="margin-bottom: 8px; font-size: 12px; color: #94a3b8">
+      <div style="margin-bottom: 8px; font-size: 12px; color: var(--text-muted)">
         Voltage: <span id="voltageValue">--</span> | Threshold: 1.0
       </div>
-      <div id="neuronMeta" style="font-size:12px; color:#9aa5b1; margin-bottom:8px; min-height: 16px;"></div>
+      <div id="neuronMeta" style="font-size:12px; color:var(--text-muted); margin-bottom:8px; min-height: 16px;"></div>
       <canvas id="trace" width="260" height="150"></canvas>
     </div>
 
@@ -433,7 +433,7 @@
       <div class="nav-tip"><strong>Q/E:</strong> Up/Down</div>
       <div class="nav-tip"><strong>Mouse Wheel:</strong> Fly Forward/Back</div>
       <div class="nav-tip"><strong>Space:</strong> Reset Position</div>
-      <div style="margin-top: 8px; font-style: italic; color: #808080">Hover the 🎮 to show this panel</div>
+      <div style="margin-top: 8px; font-style: italic; color: var(--text-muted)">Hover the 🎮 to show this panel</div>
     </div>
 
     <div id="err"></div>
