feat: enhance UI styles with gradient backgrounds and improved button aesthetics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css?v=desert-20250105" />
     <script src="js/three.min.js"></script>
     <style>
       /* Parameter info tooltips */
