feat: enhance range input styles and update script references for consistency

--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
 
     <div id="err"></div>
 
-    <script src="js/templates/schema.js"></script>
-    <script src="js/templates/registry.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/templates/schema.js?v=desert-20250105"></script>
+    <script src="js/templates/registry.js?v=desert-20250105"></script>
+    <script src="js/app.js?v=desert-20250105"></script>
   </body>
 </html>
