feat: add config_io.js script for template configuration handling

--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
     <div id="err"></div>
 
     <script src="js/templates/schema.js?v=desert-20250105"></script>
+    <script src="js/templates/config_io.js?v=desert-20250105"></script>
     <script src="js/templates/registry.js?v=desert-20250105"></script>
     <script src="js/app.js?v=desert-20250105"></script>
   </body>
