--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
       <div id="templateActions">
         <button class="btn btn-ghost" id="exportTemplate" title="Download the active template configuration">Export</button>
         <button class="btn" id="importTemplate" title="Load a template configuration from JSON">Import</button>
+        <button class="btn btn-icon" id="importHelp" title="Template import documentation">ℹ</button>
         <input type="file" id="templateImport" accept="application/json,.json" hidden />
       </div>
     </div>
