feat: enhance neuron metadata display with structured layout and improved rendering

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       <div style="margin-bottom: 8px; font-size: 12px; color: var(--text-muted)">
         Voltage: <span id="voltageValue">--</span> | Threshold: 1.0
       </div>
-      <div id="neuronMeta" style="font-size:12px; color:var(--text-muted); margin-bottom:8px; min-height: 16px;"></div>
+      <div id="neuronMeta" class="neuron-meta"></div>
       <canvas id="trace" width="260" height="150"></canvas>
     </div>
 
